<resources>
    <string name="app_name">Cookbook</string>
    <string name="subtitle">Delicious and detailed restaurant recipes on your phone</string>
    <string name="main">Main</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="about_the_app">About the app</string>
    <string name="login_btn">Login</string>
    <string name="login">Email</string>
    <string name="registr_btn">Registration</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="login_guest">Login guest</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="police">By signing up, you agree to programs terms of service and privacy policy.</string>
    <string name="recept_category">Recipes by category</string>
    <string name="national_kitchen">National kitchen</string>
    <string name="logged">You are logged in</string>
    <string name="no_logged">Such an account already exists</string>
    <string name="no_log">Account not exists</string>
    <string name="my_recipes">My recipes</string>
    <string name="favorit_recipes">Favorit recipes</string>
    <string name="settings_account">Settings &amp; account</string>
    <string name="help_feedback">Help &amp; feedback</string>
    <string name="other">Other</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot you password?</string>
    <string name="loading">Loading</string>
    <string name="check">Сhecking account existence</string>
    <string name="logout">Log out</string>


    <!-- Recipes by Category -->
    <string name="сold_appetizern">Cold appetizer</string>
    <string name="hot_appetizern">Hot appetizer</string>
    <string name="second_dishes">Second dishes</string>
    <string name="soup">Soups</string>
    <string name="porridge">Porridges</string>
    <string name="dessert">Desserts</string>
    <string name="sauce">Sauce</string>
    <string name="salads">Salads</string>
    <string name="drinks">Drinks</string>
    <!-- National Kitchen -->
    <string name="russian_kitchen">Russian kitchen</string>
    <string name="asia_kitchen">Asian kitchen</string>
    <string name="europe_kitchen">European kitchen</string>
    <string name="kavkaz_kitchen">Caucasian kitchen</string>
    <string name="vostok_kitchen">Eastern kitchen</string>
    <string name="mexico_kitchen">Mexican kitchen</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>

</resources>