<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/mainFragment"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/main"
            android:checked="true"/>

        <item
            android:id="@+id/favoriteFragment"
            android:icon="@drawable/ic_baseline_favorite"
            android:title="@string/favorite"/>

        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_baseline_settings"
            android:title="@string/settings_account"/>

        <item
            android:id="@+id/helpFragment"
            android:icon="@drawable/ic_baseline_help"
            android:title="@string/help_feedback"/>

    </group>

</menu>